<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_menu"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_lessons"
            android:icon="@drawable/ic_lessons_menu"
            android:title="@string/menu_lessons" />
        <item
            android:id="@+id/nav_kanji"
            android:icon="@drawable/ic_kanji_menu"
            android:title="@string/menu_kanji" />
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/ic_quiz_menu"
            android:title="@string/menu_quiz" />
    </group>

</menu>
