<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundQuiz">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitEnd"
        android:src="@drawable/background" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="18dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:text="@string/menu_quiz"
        android:textColor="@color/textQuiz"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/spinner_level"
        android:background="@drawable/round_rectangle"
        android:padding="15dp"
        android:layout_marginBottom="50dp"/>

    <Spinner
        android:id="@+id/spinner_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/spinner_title"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="10dp"
        android:background="@drawable/round_rectangle" />

    <Button
        android:id="@+id/startQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_quiz"
        android:textSize="22dp"
        android:layout_below="@+id/spinner_level"
        android:layout_marginTop="50dp"
        android:background="@drawable/round_rectangle"
        android:layout_centerHorizontal="true" />

    </RelativeLayout>

</RelativeLayout>